# client-web-portal

./: .env.example  .gitignore  Questions to Ask.docx  docker-compose.yml  ~$estions to Ask.docx
api-backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  backup_20260616_activity_import.sql  docker-compose.yml  firebase-client-web-portal.json  pyproject.toml  requirements-dev.txt  requirements.txt
api-backend/alembic/: env.py
api-backend/alembic/versions/: 02f0f4296350_0020_eod_records.py  2366f5c2d9bd_0012_convert_models_category_to_json.py  29a586aaf08b_0014_post_trade_allocation.py  350ce48e2f4d_0013_symbol_audit.py  5712eb238fd6_0022_allotment_redemption_approval_columns.py  6405e823862b_0001_baseline_current_schema.py  788404b616bc_0015_trade_reconciliation.py  79729eec2af4_0002_client_admin_separation.py  817926e7604a_0017_auth_status_columns.py  8f2a1c9d4b6e_0003_uuid_keys_and_column_order.py  9b76c05d3e2f_0010_drop_uq_symbol_summaries_symbol_date.py  9c4a1e7d2b3f_0023_allotment_redemption_expected_cash_out.py  _0009_chunk_b1.py  _0009_chunk_b1b.py  _0009_chunk_b2.py  _0009_chunk_b3.py  _0009_chunk_b4.py  _0009_chunk_b9.py  a1b2c3d4e5f6_0004_orders_table.py  a4d8e2f6b391_0024_onboarding_document_upload_tracking.py  (+11 more)
api-backend/app/: config.py  database.py  main.py  models.py
api-backend/db-backups/: portal_pre-016_2026-07-22.sql
api-backend/docs/: detailed-design-module-1.md  prompt-module-1.md  proposal.md
api-backend/tests/: README.md  conftest.py  factories.py  fakes.py  test_harness_smoke.py  test_secure_config.py
(+520 files in other folders)
