[project]
name = "api-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    # EoD PDF rendering — feature 015 (BE-9)
    "playwright>=1.47",
]

[tool.ruff]
line-length = 100
exclude = ["alembic", ".venv", "pc_storage"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["app", "tests"]
python_files = ["test_*.py"]

[tool.mypy]
files = ["app"]
exclude = "alembic"
ignore_missing_imports = true
